Fixing Mobile UI : Word Wrapping

--- a/src/components/Question/question.scss
+++ b/src/components/Question/question.scss
@@ -2,3 +2,8 @@
   text-decoration: none;
   color: white;
 }
+
+.toolbar__title {
+  overflow: visible;
+  white-space: normal;
+}
